# ThreadX-G0B1RE

./: .gitignore  CMakeLists.txt  G0B1RE.jflash  Threadx.ioc
App/: mainTask.c  mainTask.h  threadEntry.c  threadEntry.h
Core/Inc/: RTE_Components.h  stm32g0xx_it.h  tx_user.h
Core/Src/: app_threadx.c  main.c  stm32g0xx_it.c  tim.c
Drv/segger/: CMakeLists.txt  RTT_LOG.c  RTT_LOG.h  RTT_LOG_Conf.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
Drv/ws2812/: rgb.c  rgb.h
cmake/stm32cubemx/: CMakeLists.txt
